deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: iot-anomaly-detector
    environment: production
  name: iot-anomaly-detector
